--- a/scss/_single.scss
+++ b/scss/_single.scss
@@ -1,3 +1,5 @@
+@use 'mixins.scss' as *;
+
 .single {
     display: flex;
     justify-content: center;
@@ -117,26 +119,7 @@
             flex-wrap: wrap;
 
             li {
-                height: 32px;
-                min-width: 12px;
-                border-radius: 8px;
-                background-color: #ffffff1a;
-                display: flex;
-                align-items: stretch;
-                transition: background-color .5s cubic-bezier(.05,0,0,1);
-                
-                a {
-                    color: var(--blogtube_font_color);
-                    text-decoration: none;
-                    padding: 0 12px;
-                    font-weight: 500;
-                    display: flex;
-                    align-items: center;
-                }
-
-                &:hover {
-                    background-color: #ffffff33;
-                }
+                @include tag;
             }
         }
     }
